fix(#6286, #6292, #6293, #6294): a content record collapses back like any other, and the checker follows the pointer and sweeps the chunks (#6299)
* fix(#6286, #6292, #6293, #6294): a content record collapses back like any other, and the checker follows the pointer and sweeps the chunks

placeholder stops being a chunk chain when it shrinks back inside the region its slot owns. New
SLOT_KIND_CHUNK_COLLAPSED_TO_PLACEHOLDER_CONTENT for the commit-time replay. A pre-#6196 legacy content head
is collapsed too - which ends its ambiguity for good - but its page is poisoned rather than tracked, because
neither collapse kind names that starting marker. A content-record body is padded to MINIMUM_RECORD_SIZE on
update, as createRecordInternal already pads one it creates: without it a body shorter than 5 bytes writes a
-1..-4 that the marker namespace owns.

the allocator placed the two slots in. A target that is not a content record is reported with both RIDs and,
with FIX, the pointer is freed - reconciling count(*) with the scan. The repair frees the pointer SLOT only
(freeSlotOnly) and never goes through the ordinary delete, which would follow a corrupted pointer and remove
whatever record now sits at that position. The #6196 legacy reconciliation moves into the same loop, which
removes its "ask again" duplication.

record the FIX deleted during the run is no longer reported both as deleted and under the category it held
before. The tallies live in one CheckStats object.

findBrokenChunkChain's loop-detector set IS the set of chunks walked, handed back through ChunkChainWalk. A
head the run repaired away marks nothing, so its whole chain is swept at the source. Fails closed on any gap
in the marking, and says so rather than reporting zero orphans. Three comments promising compaction would
reclaim these are corrected: compressPage re-flows LIVE slots, and an orphaned chunk still has one.

New report fields: orphanedChunks, orphanedChunksReclaimed, danglingPlaceholderPointer